--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -182,7 +182,7 @@
                 <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
                     Getting Started
                 </a>
-                <a href="/concepts/extensible" title="Concepts" class="md-button">
+                <a href="/xskipper/concepts/extensible" title="Concepts" class="md-button">
                     Concepts
                 </a>
             </div>
