Set default version to 1.2.2 with mike 0.5.5

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Redirecting</title>
   <script>
-    window.location.replace("v1.2.1");
+    window.location.replace("1.2.2");
   </script>
 </head>
 <body>
