--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Redirecting</title>
   <script>
-    window.location.replace("1.2.2");
+    window.location.replace("v1.2.3");
   </script>
 </head>
 <body>
